src/index.css
/* ... */
.darkmode{
  background-color: var(--color2p);
  cursor: pointer;
  border: none;
  border-radius: 5vh;
  width: 10vh;
  border: solid 2px var(--color4);
  color: var(--color4);
}
.darkmode:hover{
  background-color: var(--color4);
  color: var(--color2p);
}
.darkanimation{
  animation: pulse 0.7s;
  box-shadow: 0 0 0 1.2em transparent;
}
.darkicon{
  width: 5vh;
  height: 5vh;
}

@keyframes pulse {
  0% { box-shadow: 0 0 0 0 var(--color4); }
}

.homebutton{
  background: var(--color2s);
  color: var(--color4);
  font-family: var(--font2);
  font-weight: bold;
  font-size: 4.5vh;
  border: solid;
  border-color: var(--color4);
  cursor: pointer;
  align-self: center;
  max-width: fit-content;
  margin-top: 3vh;
  box-shadow: none;
  transition: 0.65s;
}
.homebutton:hover{
  box-shadow: inset 10em 0 0 0 var(--color4);
  color: #ffffff;
}
.homebutton:before{
  content: "Leve-me para lá →";
}

.secondtext{
  font-family: var(--font3);
  font-size: 3vh;
  word-break: break-all;
  color: var(--color1);
  margin: 3vh 0;
}

.home{
  display: flex;
  flex-direction: column;
}

.anot{
  display: flex;
  flex-direction: column;
  gap: 0.5vh;
  background-color: var(--color4);
  width: 30vh;
  height: 40vh;
  border: solid;
  border-color: var(--color4);
  border-width: 1vh 2px 2px 2px;
  box-shadow: 5px 5px 0px var(--color5);
}
.editting{
  box-shadow: 5px 5px 15px var(--color4);
}

.anotcontent::-webkit-scrollbar {
  width: 7px;
}
.anotcontent::-webkit-scrollbar-thumb{
  background-color: var(--color4);
}
.anotcontent::-webkit-scrollbar-thumb:hover{
  background-color: var(--color5);
}

.wholething:nth-child(even){
  transform: rotate(2deg);
  top: -3px;
}
.wholething:nth-child(3n){
  transform: rotate(-2deg);
  top: 3px;
}
.wholething:nth-child(5n){
  transform: rotate(1deg);
  top: -2px;
}
.wholething:hover{
  top: 0px;
  transform: scale(1.15);
  transition: 0.2s ease;
  z-index: 2;
}
.favanot:hover{
  transform: scale(1.05);
}
.view:nth-child(1n){
  top: 0px;
  transform: scale(1.15);
  position: relative;
  z-index: 1;
}

.confirmbuttons{
  border-radius: 5px;
  border: none;
  color: var(--color2p);
  font-family: var(--font3);
  background-color: var(--color4);
  color: #ffffff;
  cursor: pointer;
}
.confirmbuttons:hover{
  background-color: var(--color5);
}

.displayanotations{
  margin-top: 3.5vh;
  gap: 2.5vw;
  display: flex;
  flex-wrap: wrap;
}
.displayfavorites{
  margin-top: 2vh;
}

.addanotation{
  width: 30vh;
  height: 40vh;
  font-family: var(--font1);
  color: var(--color4);
  background: var(--color2s);
  border-radius: 20px;
  border-style: dashed;
  border-color: var(--color4);
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
.addanotation:hover{
  color: var(--color5);
  border-color: var(--color5);
}
.addsvg{
  width: 7.5vh;
  height: 7.5vh;
}
.addsvglink{
  width: 4vh;
  height: 4vh;
}

input, textarea{
  box-sizing: border-box;
  resize: none;
  border: none;
  font-family: var(--font2);
  outline: none;
  width: 100%;
}

.anottitle{
  white-space: nowrap;
  padding-left: 2px;
  height: 4.5vh;
  font-size: 3vh;
  font-weight: bold;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: #ffffff;
  font-family: var(--font2);
}

.anotcontent{
  white-space: normal;
  word-break: break-all;
  background-color: #ffffff;
  font-family: var(--font2);
  font-size: 2.25vh;
  overflow: auto;
  height: 35vh;
}
.anotcontentwarning{
  word-break: break-word;
}

.functionbutton:hover{
  background-color: #e6e6e6;
}
.functionbutton{
  color: #000000;
  background: none;
  border: none;
  background: none;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 4vh;
}
.deletebutton{
  color: #e61e1e;
}
.deletebutton:hover{
  background-color: #e61e1e;
  color: #ffffff;
}

.linkbutton{
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  max-width: fit-content;
  padding: 0 3vw;
  font-size: 5vh;
  border: dashed var(--color4);
  border-radius: 15px;
  color: var(--color4);
  background: none;
}
.linkbutton:hover{
  border-color: var(--color5);
  color: var(--color5);
}

.coloredtext{
  color: var(--color4);
}

.bothbuttons{
  display: flex;
  justify-content: center;
  gap: 3px;
}

.listarea::-webkit-scrollbar {
  width: 5px;
}
.listarea::-webkit-scrollbar-thumb{
  background-color: var(--color4);
}
.listarea::-webkit-scrollbar-thumb:hover{
  background-color: var(--color5);
}

.wholelink{
  display: flex;
  position: relative;
}
.outermenu{
  border: solid var(--color4);
  border-width: 2px 2px 2px 0;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 12px;
  display: flex;
  align-items: center;
  overflow: hidden;
}
.favoritelink{
  outline: none;
  border:none;
  background-color: var(--color2s);
  color: var(--color4);
  cursor: pointer;
  height: 100%;
  width: 100%;
}
.favoritelink:hover{
  background-color: var(--color4);
  color: var(--color2s);
}
.linkimage{
  width: 4vh;
  height: 4vh;
  align-self: center;
  justify-self: center;
  margin-left: 7px;
}
.littlelink{
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #ffffff;
  border: solid var(--color4) 2px;
  font-size: 3.5vh;
  font-family: var(--font3);
  cursor: pointer;
  border-top-left-radius: 12px;
  border-bottom-left-radius: 12px; 
}
.wholeborder{
  border-radius: 12px;
}
.littlelink:hover{
  background-color: var(--color4);
}
.littlelink:hover .deletelinkbutton{
  background-color: var(--color4);
  color: #ffffff
}
.littlelink:hover .linktext{
  color: #ffffff
}
.linktext{
  padding: 0.5vw;
  text-decoration: none;
  min-width: fit-content;
  color: var(--color4);
}
.deletelinkbutton{
  height: 100%;
  width: 100%;
  border: none;
  cursor: pointer;
  color: #e61e1e;
  background-color: #ffffff;
  outline: none;
}
.deletelinkbutton:hover{
  color: #ffffff;
  background-color: #e61e1e !important;
}
/* ... */

